--- a/SharedScans.Reloaded/ModConfig.json
+++ b/SharedScans.Reloaded/ModConfig.json
@@ -3,20 +3,50 @@
   "ModName": "Shared Scans",
   "ModAuthor": "zutomayofan50",
   "ModVersion": "1.0.0",
-  "ModDescription": "",
+  "ModDescription": "Utility library for streamlining sharing scans between mods.",
   "ModDll": "SharedScans.Reloaded.dll",
   "ModIcon": "Preview.png",
   "ModR2RManagedDll32": "x86/SharedScans.Reloaded.dll",
   "ModR2RManagedDll64": "x64/SharedScans.Reloaded.dll",
   "ModNativeDll32": "",
   "ModNativeDll64": "",
+  "Tags": [],
+  "CanUnload": null,
+  "HasExports": true,
   "IsLibrary": true,
   "ReleaseMetadataFileName": "SharedScans.Reloaded.ReleaseMetadata.json",
-  "PluginData": {},
+  "PluginData": {
+    "GitHubDependencies": {
+      "IdToConfigMap": {
+        "reloaded.sharedlib.hooks": {
+          "Config": {
+            "UserName": "Sewer56",
+            "RepositoryName": "Reloaded.SharedLib.Hooks.ReloadedII",
+            "UseReleaseTag": true,
+            "AssetFileName": "reloaded.sharedlib.hooks.zip"
+          },
+          "ReleaseMetadataName": "Sewer56.Update.ReleaseMetadata.json"
+        },
+        "Reloaded.Memory.SigScan.ReloadedII": {
+          "Config": {
+            "UserName": "Reloaded-Project",
+            "RepositoryName": "Reloaded.Memory.SigScan",
+            "UseReleaseTag": false,
+            "AssetFileName": "Mod.zip"
+          },
+          "ReleaseMetadataName": "Reloaded.Memory.SigScan.ReloadedII.ReleaseMetadata.json"
+        }
+      }
+    },
+    "GameBanana": {
+      "ItemType": "Mod",
+      "ItemId": 495507
+    }
+  },
   "IsUniversalMod": true,
   "ModDependencies": [
-    "reloaded.sharedlib.hooks",
-    "Reloaded.Memory.SigScan.ReloadedII"
+    "Reloaded.Memory.SigScan.ReloadedII",
+    "reloaded.sharedlib.hooks"
   ],
   "OptionalDependencies": [],
   "SupportedAppId": [],
