--- a/SharedScans.Interfaces/SharedScans.Interfaces.csproj
+++ b/SharedScans.Interfaces/SharedScans.Interfaces.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Reloaded.Hooks.Definitions" Version="1.15.0" />
+  </ItemGroup>
+
 </Project>
